Prevent inner horizontal scrollbar on diff viewer content

--- a/client/post-editor/editor-diff-viewer/style.scss
+++ b/client/post-editor/editor-diff-viewer/style.scss
@@ -28,6 +28,7 @@
 	font-family: $serif;
 	font-size: 15px;
 	white-space: pre-wrap;
+	word-wrap: break-word;
 	padding: 0;
 	background: transparent;
 	overflow-y: hidden;
